[package]
name = "aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-iam = { version = "1" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
tokio = { workspace = true }
