[package]
name = "satounki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
edit = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { version = "0.14", features = ["color"] }
termcolor = "1"
termcolor-json = "1"
