[package]
name = "common-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
common-platform = { path = "../common-platform" }

convert_case = "0.6"
anyhow = "1"
minijinja = "1"
paste = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }