[package]
name = "common-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-macros = { path = "../common-macros" }
derive_more = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
display_json = { workspace = true }
macro_rules_attribute = { workspace = true }
paste = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
strum = { workspace = true }