[package]
name = "rolescraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcloud = { path = "../gcloud" }
aws = { path = "../aws" }
color-eyre = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }